fix (backups) repair broken ui and rendering queue

--- a/src/app/home/backups/backups.component.scss
+++ b/src/app/home/backups/backups.component.scss
@@ -86,6 +86,10 @@ p, a, span, button, div {
   &-code {
     background: $texteditor;
     overflow: hidden;
+    lty-icon {
+      width: 32px;
+      height: 32px;
+    }
     pre {
       color: $text-secondary;
       padding: 10px;
